# qt-list-proof-of-concept

./: CMakeLists.txt  CMakeLists.txt.user.268e367  MessageGroupModel.cpp  MessageGroupModel.h  MessageModel.cpp  MessageModel.h  MyListModel.cpp  MyListModel.h  icons.qrc  main.cpp  mainwindow.cpp  mainwindow.h  message.cpp  message.h  messagegroup.cpp  messagegroup.h  messagegroupmodel.cpp  messagegroupmodel.h  messagemodel.cpp  messagemodel.h
qml/: ScrollHelper.qml  Timeline.qml
